# projektSieci

regulator/: CMakeLists.txt  CMakeLists.txt.user.8dc45fb  arx.cpp  arx.h  chartwidget.cpp  chartwidget.h  chartwidget.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  generator.cpp  generator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pid.cpp  pid.h  simulation.cpp  simulation.h
